--- a/style.css
+++ b/style.css
@@ -1,29 +1,40 @@
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #f8f8f8;
-    margin: 0;
+.container {
+  text-align: center;
+  margin-top: 100px;
 }
 
-#game-container {
-    text-align: center;
+h1 {
+  font-size: 36px;
+  margin-bottom: 30px;
 }
 
-#circle {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    background-color: #007bff;
-    display: inline-block;
-    cursor: pointer;
+#game-area {
+  width: 200px;
+  height: 200px;
+  border: 1px solid black;
+  margin: 0 auto;
+  position: relative;
 }
 
-#score {
-    margin-top: 30px;
+#target {
+  width: 50px;
+  height: 50px;
+  background-color: red;
+  border-radius: 50%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
+  display: none;
+}
+
+#score, #time {
+  font-size: 24px;
 }
 
 #start-button {
-    margin-top: 30px;
+  font-size: 24px;
+  margin-top: 20px;
 }
