--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 #player {
-  width: 640px;
-  height: 360px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 24px;
 }
