--- a/style.css
+++ b/style.css
@@ -1,7 +1,18 @@
 #player {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 24px;
+  display: block;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 640px;
+  height: 0;
+  padding-bottom: 56.25%;
+  position: relative;
 }
+
+#player iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
