--- a/style.css
+++ b/style.css
@@ -1,18 +1,26 @@
 #player {
-  display: block;
-  margin: 0 auto;
-  width: 100%;
-  max-width: 640px;
-  height: 0;
-  padding-bottom: 56.25%;
+
   position: relative;
+
+  padding-bottom: 56.25%;
+
+  /* set max-width to 100% to prevent the video from exceeding the width of its container */
+
+  max-width: 100%;
+
+  height: 0;
+
 }
 
-#player iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+/* use media queries to adjust the styling for smaller screens */
+
+@media (max-width: 767px) {
+
+  #player {
+
+    padding-bottom: 75%;
+
+  }
+
 }
 
